e-mail link fix

--- a/downhole-wash-tools/spincat-sc-168.html
+++ b/downhole-wash-tools/spincat-sc-168.html
@@ -100,7 +100,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge SpinCat SC-168&body=Check out the StoneAge SpinCat SC-168 downhole wash tools: http://stoneagetools.com/downhole-wash-tools/spincat-sc-168.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge SpinCat SC-168&body=Check out the StoneAge SpinCat SC-168 downhole wash tools: http://www.stoneagetools.com/downhole-wash-tools/spincat-sc-168.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
