--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -119,7 +119,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge 4-inch Badger&body=Check out the StoneAge 4-inch Badger for high pressure cleaning for pipes with bends: http://stoneagetools.com/badger-4in-pipe-cleaning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge 4-inch Badger&body=Check out the StoneAge 4-inch Badger for high pressure cleaning for pipes with bends: http://www.stoneagetools.com/badger-4in-pipe-cleaning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
