--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -131,7 +131,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge BJV&body=Check out the StoneAge BJV for high pressure pipe cleaning: http://stoneagetools.com/rotary-waterblast-tools/bjv-pipe-cleaning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge BJV&body=Check out the StoneAge BJV for high pressure pipe cleaning: http://www.stoneagetools.com/rotary-waterblast-tools/bjv-pipe-cleaning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
