--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -126,7 +126,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Gopher&body=Check out the StoneAge Gopher small pipe and tube cleaning tools: http://stoneagetools.com/rotary-waterblast-tools/gopher-tube-cleaning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Gopher&body=Check out the StoneAge Gopher small pipe and tube cleaning tools: http://www.stoneagetools.com/rotary-waterblast-tools/gopher-tube-cleaning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
