--- a/rotary-waterblast-tools/hose-storage-reel.html
+++ b/rotary-waterblast-tools/hose-storage-reel.html
@@ -109,7 +109,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge HWB Hose Storage Reel&body=Check out the StoneAge HWB Hose Storage Reel: http://stoneagetools.com/rotary-waterblast-tools/hose-storage-reel.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge HWB Hose Storage Reel&body=Check out the StoneAge HWB Hose Storage Reel: http://www.stoneagetools.com/rotary-waterblast-tools/hose-storage-reel.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
