--- a/rotary-waterblast-tools/nozzles-extensions.html
+++ b/rotary-waterblast-tools/nozzles-extensions.html
@@ -138,7 +138,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Nozzles and Extensions&body=Check out StoneAge Rotary Nozzles and Extensions:  http://stoneagetools.com/rotary-waterblast-tools/nozzles-extensions.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Nozzles and Extensions&body=Check out StoneAge Rotary Nozzles and Extensions:  http://www.stoneagetools.com/rotary-waterblast-tools/nozzles-extensions.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
