--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -131,7 +131,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Rotary Swivels&body=Check out StoneAge Rotary Swivels:  http://stoneagetools.com/rotary-waterblast-tools/rotary-swivels.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Rotary Swivels&body=Check out StoneAge Rotary Swivels:  http://www.stoneagetools.com/rotary-waterblast-tools/rotary-swivels.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
