--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -100,7 +100,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=Warthog Manhole Cleaner&body=Check out the Warthog Manhole Cleaner by StoneAge: http://stoneagetools.com/sewer-tools-nozzles/manhole-cleaner.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=Warthog Manhole Cleaner&body=Check out the Warthog Manhole Cleaner by StoneAge: http://www.stoneagetools.com/sewer-tools-nozzles/manhole-cleaner.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
