--- a/waterblast-automation/bfw-100-boiler-cleaner.html
+++ b/waterblast-automation/bfw-100-boiler-cleaner.html
@@ -118,7 +118,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge BFW-100 High Flow Boiler Cleaner&body=Check out the StoneAge BFW-100 for high flow online boiler cleaning: http://stoneagetools.com/waterblast-automation/bfw-100-boiler-cleaner.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge BFW-100 High Flow Boiler Cleaner&body=Check out the StoneAge BFW-100 for high flow online boiler cleaning: http://www.stoneagetools.com/waterblast-automation/bfw-100-boiler-cleaner.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
