--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -115,7 +115,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Blackhawk&body=Check out the StoneAge Blackhawk concrete demolition system: http://stoneagetools.com/waterblast-automation/blackhawk-concrete-demo.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Blackhawk&body=Check out the StoneAge Blackhawk concrete demolition system: http://www.stoneagetools.com/waterblast-automation/blackhawk-concrete-demo.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
