--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -122,7 +122,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge CST-Air&body=Check out the StoneAge CST-Air for cable-guided furnace and boiler cleaning: http://stoneagetools.com/waterblast-automation/cable-swivel-tool.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge CST-Air&body=Check out the StoneAge CST-Air for cable-guided furnace and boiler cleaning: http://www.stoneagetools.com/waterblast-automation/cable-swivel-tool.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
