--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -114,7 +114,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Outside Diameter Pipe Cleaner&body=Check out the StoneAge Outside Diameter Pipe Cleaner for process piping: http://stoneagetools.com/waterblast-automation/rigid-lance-machine.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Outside Diameter Pipe Cleaner&body=Check out the StoneAge Outside Diameter Pipe Cleaner for process piping: http://www.stoneagetools.com/waterblast-automation/rigid-lance-machine.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
