--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -119,7 +119,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge ProDrive&body=Check out the ProDrive hose feed device engineered to quickly and safely clean a broad range of pipes:  http://stoneagetools.com/waterblast-automation/prodrive-hose-feed.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge ProDrive&body=Check out the ProDrive hose feed device engineered to quickly and safely clean a broad range of pipes:  http://www.stoneagetools.com/waterblast-automation/prodrive-hose-feed.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
