--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -123,7 +123,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Rigid Lance Machine&body=Check out the StoneAge Rigid Lance Machine tube lancing system: http://stoneagetools.com/waterblast-automation/rigid-lance-machine.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Rigid Lance Machine&body=Check out the StoneAge Rigid Lance Machine tube lancing system: http://www.stoneagetools.com/waterblast-automation/rigid-lance-machine.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
