--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -109,7 +109,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Self-Rotary Heads&body=Check out Self-Rotary Heads for surface cleaning: http://stoneagetools.com/waterblast-automation/self-rotary-heads.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Self-Rotary Heads&body=Check out Self-Rotary Heads for surface cleaning: http://www.stoneagetools.com/waterblast-automation/self-rotary-heads.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
