--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -119,7 +119,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Torus Tank Cleaning&body=Check out the StoneAge Torus TR-130 tank cleaning tools:  http://stoneagetools.com/waterblast-automation/torus-tr-130.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Torus Tank Cleaning&body=Check out the StoneAge Torus TR-130 tank cleaning tools:  http://www.stoneagetools.com/waterblast-automation/torus-tr-130.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
