--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -131,7 +131,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Backout Preventers&body=Check out StoneAge backout preventers for pipe and tube cleaning: http://stoneagetools.com/backout-preventers.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Backout Preventers&body=Check out StoneAge backout preventers for pipe and tube cleaning: http://www.stoneagetools.com/backout-preventers.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
