--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -127,7 +127,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge 2-inch Badger&body=Check out the StoneAge 2-inch Badger for high pressure cleaning for small pipes with bends: http://stoneagetools.com/rotary-waterblast-tools/badger-2in-pipe-cleaning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge 2-inch Badger&body=Check out the StoneAge 2-inch Badger for high pressure cleaning for small pipes with bends: http://www.stoneagetools.com/rotary-waterblast-tools/badger-2in-pipe-cleaning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
