--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -131,7 +131,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Banshee&body=Check out StoneAge Banshee rotary tube cleaning tools:  http://stoneagetools.com/rotary-waterblast-tools/banshee-tube-cleaners.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Banshee&body=Check out StoneAge Banshee rotary tube cleaning tools:  http://www.stoneagetools.com/rotary-waterblast-tools/banshee-tube-cleaners.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
