--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -111,7 +111,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Barracuda&body=Check out the StoneAge Barracuda rotary shotgun tools:  http://stoneagetools.com/rotary-waterblast-tools/barracuda-shotgunning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Barracuda&body=Check out the StoneAge Barracuda rotary shotgun tools:  http://www.stoneagetools.com/rotary-waterblast-tools/barracuda-shotgunning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
