--- a/rotary-waterblast-tools/bjv-centralizers.html
+++ b/rotary-waterblast-tools/bjv-centralizers.html
@@ -127,7 +127,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge BJV Centralizers&body=Check out StoneAge centralizer options for BJV pipe cleaning tools: http://stoneagetools.com/rotary-waterblast-tools/bjv-centralizers.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge BJV Centralizers&body=Check out StoneAge centralizer options for BJV pipe cleaning tools: http://www.stoneagetools.com/rotary-waterblast-tools/bjv-centralizers.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
