--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -127,7 +127,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Automated Flex Lancing&body=Check out the StoneAge AutoBox ABX-2L automated flex lancing system:  http://stoneagetools.com/waterblast-automation/autobox-abx-2l.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Automated Flex Lancing&body=Check out the StoneAge AutoBox ABX-2L automated flex lancing system:  http://www.stoneagetools.com/waterblast-automation/autobox-abx-2l.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
