--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -123,7 +123,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Automated Hose Control &body=Check out the StoneAge AutoBox ABX-500 automated hose controle system for pipe and vessel cleaning: http://stoneagetools.com/waterblast-automation/autobox-abx-500.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Automated Hose Control &body=Check out the StoneAge AutoBox ABX-500 automated hose control system for pipe and vessel cleaning: http://www.stoneagetools.com/waterblast-automation/autobox-abx-500.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
