--- a/waterblast-automation/boiler-tube-cleaner.html
+++ b/waterblast-automation/boiler-tube-cleaner.html
@@ -115,7 +115,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Boiler Tube Cleaner&body=Check out the StoneAge Boiler Tube Cleaner to automate the cleaning of tubes inside package boilers:  http://stoneagetools.com/waterblast-automation/boiler-tube-cleaner.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Boiler Tube Cleaner&body=Check out the StoneAge Boiler Tube Cleaner to automate the cleaning of tubes inside package boilers:  http://www.stoneagetools.com/waterblast-automation/boiler-tube-cleaner.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
