--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -115,7 +115,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Bundle Blaster&body=Check out the StoneAge Bundle Blaster portable shellside cleaning system: http://stoneagetools.com/waterblast-automation/bundle-blaster.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Bundle Blaster&body=Check out the StoneAge Bundle Blaster portable shellside cleaning system: http://www.stoneagetools.com/waterblast-automation/bundle-blaster.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
