--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -123,7 +123,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Navigator hose drive&body=Check out the StoneAge Navigator portable Rotary Hose Device (RHD) for cleaning small pipes with bends:  http://stoneagetools.com/waterblast-automation/navigator-hose-drive.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Navigator hose drive&body=Check out the StoneAge Navigator portable Rotary Hose Device (RHD) for cleaning small pipes with bends:  http://www.stoneagetools.com/waterblast-automation/navigator-hose-drive.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
