--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -110,7 +110,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Powered Rotational Heads&body=Check out StoneAge Powered Rotational Heads for surface cleaning: http://stoneagetools.com/waterblast-automation/powered-rotation-units.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Powered Rotational Heads&body=Check out StoneAge Powered Rotational Heads for surface cleaning: http://www.stoneagetools.com/waterblast-automation/powered-rotation-units.html">E-mail link</a></li>
             </ul>
           </div>
 -->
