--- a/waterblast-automation/sm-air-large-tank-cleaner.html
+++ b/waterblast-automation/sm-air-large-tank-cleaner.html
@@ -114,7 +114,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge SM-Air Large Tank Cleaner Cleaner&body=Check out the StoneAge SM-Air Large Tank Cleaner for high flow cleaning of tanks and large vessels: http://stoneagetools.com/waterblast-automation/sm-air-large-tank-cleaner.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge SM-Air Large Tank Cleaner Cleaner&body=Check out the StoneAge SM-Air Large Tank Cleaner for high flow cleaning of tanks and large vessels: http://www.stoneagetools.com/waterblast-automation/sm-air-large-tank-cleaner.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
