--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -123,7 +123,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Remote Shotgunning&body=Check out the StoneAge Striker remote shotgunning system for automated surface preparation:  http://stoneagetools.com/waterblast-automation/striker-remote-shotgunning.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Remote Shotgunning&body=Check out the StoneAge Striker remote shotgunning system for automated surface preparation:  http://www.stoneagetools.com/waterblast-automation/striker-remote-shotgunning.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
