--- a/waterblast-automation/torus-positioning-booms.html
+++ b/waterblast-automation/torus-positioning-booms.html
@@ -114,7 +114,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Positioning Booms&body=Check out StoneAge Positioning Booms for tank and vessel cleaning: http://stoneagetools.com/waterblast-automation/torus-positioning-booms.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Positioning Booms&body=Check out StoneAge Positioning Booms for tank and vessel cleaning: http://www.stoneagetools.com/waterblast-automation/torus-positioning-booms.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
