--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -131,7 +131,7 @@
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Yellow Jacket&body=Check out the StoneAge Yellow Jacket for online boiler cleaning: http://stoneagetools.com/waterblast-automation/yellow-jacket-boiler-cleaner.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Yellow Jacket&body=Check out the StoneAge Yellow Jacket for online boiler cleaning: http://www.stoneagetools.com/waterblast-automation/yellow-jacket-boiler-cleaner.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
