WGR and Dealer fixes

--- a/contact.html
+++ b/contact.html
@@ -626,12 +626,12 @@ Finland</a></li>
                         <h2 id="France">France</h2>
                         <div class="row">
                           <div class="col-sm-4">
-                            <h4>ACH</h4>
+                            <h4>DERC Salotech</h4>
                             <p>
-                            <span class="grey">Location:</span> Villefontaine, France<br/>
-                            <span class="grey">Phone:</span> (+33) (0)4 74 82 71 06<br/>
-                            <span class="grey">Website:</span> <a href="http://www.ach-france.com" target="_blank">www.ach-france.com</a><br/>
-                            <span class="grey">Email:</span> <a href="mailto:contact@ach-france.com">contact@ach-france.com</a>
+                            <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
+                            <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
+                            <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a><br/>
+                            <span class="grey">Email:</span> <a href="mailto:info@salotech.nl">info@salotech.nl</a>
                             </p>
                           </div>
                           <div class="col-sm-4">
@@ -658,21 +658,12 @@ Finland</a></li>
                         <h2 id="Germany">Germany</h2>
                         <div class="row">
                           <div class="col-sm-4">
-                            <h4>Derc Salotech Deutschland GmbH</h4>
+                            <h4>Salotech GmbH</h4>
                             <p>
                             <span class="grey">Location:</span> Seevetal, Germany<br/>
                             <span class="grey">Phone:</span> (+49) (0) 4105 13690 00<br/>
-                            <span class="grey">Website:</span> <a href="http://www.waterjetting.nl/de/salotech-gmbh" target="_blank">www.waterjetting.nl/de/salotech-gmbh</a><br/>
+                            <span class="grey">Website:</span> <a href="http://www.salotech.de" target="_blank">www.salotech.de</a><br/>
                             <span class="grey">Email:</span> <a href="mailto:info@salotech.de">info@salotech.de</a>
-                            </p>
-                          </div>
-                          <div class="col-sm-4">
-                            <h4>Jetstream Jetstream Hochdruck-Losungen GmbH</h4>
-                            <p>
-                            <span class="grey">Location:</span> Berlin, Germany<br/>
-                            <span class="grey">Phone:</span> (+49) (0) 3020 6068 70<br/>
-                            <span class="grey">Website:</span> <a href="http://www.jetstream-germany.com" target="_blank">www.jetstream-germany.com</a><br/>
-                            <span class="grey">Email:</span> <a href="mailto:info@jetstream-germany.com">info@jetstream-germany.com</a>
                             </p>
                           </div>
                         </div>
@@ -732,11 +723,11 @@ Finland</a></li>
                         <h2 id="Netherlands">Netherlands</h2>
                         <div class="row">
                           <div class="col-sm-4">
-                            <h4>Derc Salotech International B.V.</h4>
+                            <h4>DERC Salotech</h4>
                             <p>
                             <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
                             <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
-                            <span class="grey">Website:</span> <a href="http://www.waterjetting.nl/derc-salotech" target="_blank">www.waterjetting.nl/derc-salotech</a><br/>
+                            <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a><br/>
                             <span class="grey">Email:</span> <a href="mailto:info@salotech.nl">info@salotech.nl</a>
                             </p>
                           </div>
@@ -2146,15 +2137,6 @@ Finland</a></li>
 <span class="grey">Email:</span> <a href="mailto:info@gruelo.de">info@gruelo.de</a>
 </p>
                           </div>
-                          <div class="col-sm-4 dealer">
-                            <h4>Jetstream Hochdruck-Losungen GmbH</h4>
-<p>
-<span class="grey">Location:</span> Berlin, Germany<br/>
-<span class="grey">Phone:</span> (+49) 0 3020 606870<br/>
-<span class="grey">Website:</span> <a href="www.jetstream-germany.com" target="_blank">www.jetstream-germany.com</a><br/>
-<span class="grey">Email:</span> <a href="mailto:info@jetstream-germany.com">info@jetstream-germany.com</a>
-</p>
-                          </div>
                         </div>
                       </li>
                       <li class="list-group-item">
@@ -2236,15 +2218,6 @@ Finland</a></li>
 <span class="grey">Phone:</span> (+44) (0) 1706 828888<br/>
 <span class="grey">Website:</span> <a href="www.jetchem.com" target="_blank">www.jetchem.com</a><br/>
 <span class="grey">Email:</span> <a href="mailto:info@jetchem.com">info@jetchem.com</a>
-</p>
-                          </div>
-                          <div class="col-sm-4 dealer">
-                            <h4>Jetstream Europe Ltd</h4>
-<p>
-<span class="grey">Location:</span> Halesowen, United Kingdom<br/>
-<span class="grey">Phone:</span> (+44) (0) 1215 503402<br/>
-<span class="grey">Website:</span> <a href="www.jetstreameurope.co.uk" target="_blank">www.jetstreameurope.co.uk</a><br/>
-<span class="grey">Email:</span> <a href="mailto:sales@jetstreameurope.co.uk">sales@jetstreameurope.co.uk</a>
 </p>
                           </div>
                         </div>
