--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -267,7 +267,6 @@
                 <ul>
                   <li><a href="../assets/pdf/warthog_wgr_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum Data Sheet</a></li>
                   <li><a href="../assets/pdf/manuals/wgr_user_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum User Manual</a></li>
-                  <li><a href="#" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Magnum Parts Breakdown</a></li>
                   <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -293,16 +292,16 @@
     </div>
     <div class="row row-centered">
         <div class="col-sm-2 col-centered">
-          <a href="../waterblast-automation/autobox-abx-500.html"><img class="img-responsive" src="../assets/img/product/abx-500-03.jpg" alt="AutoBox ABX-500">
-          <h5>AutoBox ABX-500</h5></a>
+          <a href="../sewer-tools-nozzles/warthog-whr-magnum.html"><img class="img-responsive" src="../assets/img/product/thumb-whr-02.jpg" alt="Warthog WHR Magnum">
+          <h5>WHR Magnum</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">
-          <h5>Backout Preventers</h5></a>
+          <a href="../sewer-tools-nozzles/warthog-wg.html"><img class="img-responsive" src="../assets/img/product/thumb-wg-01.jpg" alt="Warthog WG-1 Classic">
+          <h5>WG-1 Classic</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
-<!--          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="High pressure pipe cleaning backout preventers">-->
-          <h5>Stinger</h5></a>
+          <a href="../sewer-tools-nozzles/warthog-wd.html"><img class="img-responsive" src="../assets/img/product/thumb-wd-02.jpg" alt="Warthog WD 1-1/4">
+          <h5>WD 1-1/4</h5></a>
         </div>
       </div>
     </div>
