--- a/contact.html
+++ b/contact.html
@@ -564,7 +564,13 @@ Finland</a></li>
                         <!-- 1st row -->
                         <div class="row">
                           <div class="col-sm-4">
-                            
+                            <h4>DERC Salotech</h4>
+                            <p>
+                            <span class="grey">Location:</span> Oud-Beijerland, Netherlands<br/>
+                            <span class="grey">Phone:</span> (+31) (0)186 621484<br/>
+                            <span class="grey">Website:</span> <a href="http://www.salotech.nl" target="_blank">www.salotech.nl</a><br/>
+                            <span class="grey">Email:</span> <a href="mailto:info@salotech.nl">info@salotech.nl</a>
+                            </p>
                           </div>
                         </div>
                       </li>
