--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -313,7 +313,7 @@
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Hight performance, less maintenance, longer life</h2>
+          <h2>High performance, less maintenance, longer life</h2>
           <p>The Warthog WGR Magnum is specifically designed for optimal handling of dirty or recycled water and extended tool durability.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
