--- a/contact.html
+++ b/contact.html
@@ -1123,20 +1123,9 @@ Finland</a></li>
                         <div class="row first">
                           <div class="col-sm-4">
                             <div class="dealer">
-                              <h4>BlastJet</h4>
-                              <p>
-                              <span class="grey">Location:</span> Marleston, South Australia, Australia<br/>
-                              <span class="grey">Phone:</span> (+61) 8 8292 1000<br/>
-                              <span class="grey">Website:</span> <a href="http://www.blastjet.com.au" target="_blank">www.blastjet.com.au</a><br/>
-                              <span class="grey">Email:</span> <a href="mailto:sales@blastjet.com.au">sales@blastjet.com.au</a>
-                              </p>
-                            </div>
-                          </div>
-                          <div class="col-sm-4">
-                            <div class="dealer">
                               <h4>Hammelmann - Australia</h4>
                               <p>
-                              <span class="grey">Location:</span> Melbourne, Victoria, Australia<br/>
+                              <span class="grey">Location:</span> Melbourne, Victoria<br/>
                               <span class="grey">Phone:</span> (+61) 3 9312 2388<br/>
                               <span class="grey">Website:</span> <a href="http://www.hammelmann.com.au" target="_blank">www.hammelmann.com.au</a><br/>
                               <span class="grey">Email:</span> <a href="mailto:mail@hammelmann.com.au">mail@hammelmann.com.au</a>
@@ -1145,23 +1134,9 @@ Finland</a></li>
                           </div>
                           <div class="col-sm-4">
                             <div class="dealer">
-                              <h4>Kerrick</h4>
-                              <p>
-                              <span class="grey">Location:</span> New South Wales, Australia<br/>
-                              <span class="grey">Phone:</span> (+61) 2 9737 9797<br/>
-                              <span class="grey">Website:</span> <a href="http://www.kerrick.com.au" target="_blank">www.kerrick.com.au</a><br/>
-                              <span class="grey">Email:</span> <a href="mailto:sales@kerrick.com.au">sales@kerrick.com.au</a>
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- 2nd row -->
-                        <div class="row first">
-                          <div class="col-sm-4">
-                            <div class="dealer">
                               <h4>Metco</h4>
                               <p>
-                              <span class="grey">Location:</span> Edwardstown, South Australia, Australia<br/>
+                              <span class="grey">Location:</span> Edwardstown, South Australia<br/>
                               <span class="grey">Phone:</span> (+61) 8 8297 2011<br/>
                               <span class="grey">Website:</span> <a href="http://www.metco.com.au" target="_blank">www.metco.com.au</a><br/>
                               <span class="grey">Email:</span> <a href="mailto:sales@metco.com.au">sales@metco.com.au</a>
@@ -1172,7 +1147,7 @@ Finland</a></li>
                             <div class="dealer">
                               <h4>WOMA Australia</h4>
                               <p>
-                              <span class="grey">Location:</span> Perth,Western Australia, Australia<br/>
+                              <span class="grey">Location:</span> Perth,Western Australia<br/>
                               <span class="grey">Phone:</span> (+61) 8 9434 6622<br/>
                               <span class="grey">Website:</span> <a href="http://www.woma.com.au" target="_blank">www.woma.com.au</a><br/>
                               <span class="grey">Email:</span> <a href="mailto:hpwater@woma.com.au">hpwater@woma.com.au</a>
