--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -242,6 +242,8 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/manuals/WS_Half_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2 Tool Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/WS-J_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2-J Tool Manual</a></li>
+                  <li><a href="../assets/pdf/manuals/WS-P6_P8_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2 P6 &amp; P8 Tool Manual</a></li>
                   <li><a href="../assets/pdf/kits-ws.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WS-1/2 Service Kits</a></li>
                   <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
                 </ul>
