--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -189,7 +189,7 @@
                     <td><span class="metric">30.48 m</span></td>
                   </tr>
                   <tr>
-                    <th>Weigth Complete</th>
+                    <th>Weight Complete</th>
                     <td>85 lbs</td>
                     <td><span class="metric">38.5 kg</span></td>
                   </tr>
