--- a/sewer-tools-nozzles/hydro-x.html
+++ b/sewer-tools-nozzles/hydro-x.html
@@ -389,6 +389,7 @@
               <div class="panel-body">
                 <ul>
                   <li><a href="../assets/pdf/hydro-x_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hydro-X Data Sheet</a></li>
+                  <li><a href="../assets/pdf/hydro-x_jetting_chart.pdf" target="_blank"><i class="fa fa-plane"></i> &nbsp;Hydro-X Jetting Chart</a></li>
                 </ul>
                 <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
                 <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
