--- a/contact.html
+++ b/contact.html
@@ -1336,6 +1336,26 @@ Finland</a></li>
 <span class="grey">Email:</span> <a href="mailto:lswinnerton@spartantool.com">lswinnerton@spartantool.com</a>
 </p>
                           </div>
+                          <div class="col-sm-4 dealer">
+                            <h4>Plumbers Depot Inc.</h4>
+<p>
+<span class="grey">Location:</span> Hawthorne, CA<br/>
+<span class="grey">Phone:</span> 310 355 1700<br/>
+<span class="grey">Website:</span> <a href="http://www.plumbersdepotinc.com" target="_blank">www.plumbersdepotinc.com</a><br/>
+<span class="grey">Email:</span> <a href="mailto:maria.padilla@plumbersdepotinc.com">maria.padilla@plumbersdepotinc.com</a>
+</p>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-4 dealer">
+                            <h4>WECO Industries</h4>
+<p>
+<span class="grey">Location:</span> Vacaville, CA<br/>
+<span class="grey">Phone:</span> 707 446 6661<br/>
+<span class="grey">Website:</span> <a href="http://www.wecoind.com/" target="_blank">www.wecoind.com</a><br/>
+<span class="grey">Email:</span> <a href="mailto:bobbycaffey@wecoind.com">bobbycaffey@wecoind.com</a>
+</p>
+                          </div>
                         </div>
                       </li>
                       <li class="list-group-item">
