new job posting

--- a/careers.html
+++ b/careers.html
@@ -104,6 +104,10 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
+              <a href="assets/pdf/jobs/Large_Assembly_Team_Member_201601.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Large Assembly Team Member</h4></a>
+                <p>This position is responsible for the assembly of our automated equipment required by work orders, including but not limited to inspection of all assemblies assigned by Assembly Supervisor.</p>
+            </li>
+            <li>
               <a href="assets/pdf/jobs/Buyer_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Buyer – R&amp;D and Special Projects Support</h4></a>
                 <p>The Buyer-R&amp;D and Special Projects Support is responsible for the purchasing, scheduling, and expediting of purchased parts for R&amp;D, special orders for the Sales department, and custom projects.</p>
             </li>
